--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "Selvania-Launcher",
-    "preductname": "Selvania Launcher",
+    "name": "Incroyaux-Launcher",
+    "preductname": "Incroyaux-Launcher",
     "version": "1.0.2",
-    "description": "Launcher Mincraft custom (crack, premium)",
+    "description": "Launcher Minecraft custom (crack, premium)",
     "main": "src/app.js",
-    "author": "Luuxis",
-    "url": "http://launcher.selvania.fr",
+    "author": "AzeqwFr",
+    "url": "https://launcherincroyaux.miridiagame.fr",
     "engines": {
         "node": "16.x.x"
     },
@@ -31,6 +31,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/luuxis/Selvania-Launcher.git"
+        "url": "git+https://github.com/Dieudetous/Selvania-Launcher.git"
     }
 }
